--- a/assets/sass/main2.scss
+++ b/assets/sass/main2.scss
@@ -417,6 +417,8 @@ header {
 			position: absolute;
 			top: 0;
 			left: 0;
+			width: 100%;
+			height: 100%;
 			z-index: 1;
 			li {
 				position: absolute;
@@ -431,22 +433,8 @@ header {
 				}
 				img {
 					display: block;
-					width: 150px;
-					@include breakpoint(414px) {
-						width: 215px;
-					}
-					@include breakpoint(1024px) {
-						width: 242px;
-					}
-					@include breakpoint(1366px) {
-						width: 323px;
-					}
-					@include breakpoint(1600px) {
-						width: 378px;
-					}
-					@include breakpoint(1920px) {
-						width: 454px;
-					}
+					width: 100%;
+					height: 100%;
 				}
 			}
 		}
