--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -813,7 +813,7 @@ header .slider__image {
   top: 0;
   left: 0;
   width: 100%;
-  left: 100%;
+  height: 100%;
   z-index: 1;
 }
 header .slider__image li {
@@ -836,7 +836,7 @@ header .slider__image li.active {
 header .slider__image li img {
   display: block;
   width: 100%;
-  left: 100%;
+  height: 100%;
 }
 header .slider__mask {
   position: absolute;
