--- a/assets/sass/main2.scss
+++ b/assets/sass/main2.scss
@@ -171,8 +171,8 @@ nav {
 			@include breakpoint(max-width 1023px) {
 				margin-left: -15vw;
 				margin-right: -15vw;
-				padding-left: 80px;
-				padding-right: 80px;
+				padding-left: 100px;
+				padding-right: 100px;
 				padding-bottom: 10px;
 				border-bottom: 1px solid #515264;
 			}
@@ -2125,20 +2125,19 @@ ul.list-reset.app-list {
 	&-bg {
 		background-position: center;
 		background-repeat: no-repeat;
-		// background-attachment: fixed;
 		@include background-size(cover);
 		&.slider {
 			&-game-menu {
-				background-image: url("../img/bgMedia.png");
+				background-image: url("../img/fellowBg.png");
 			}
 			&-monster {
-				background-image: url("../img/bgAd.png");
+				background-image: url("../img/monsterBg.png");
 			}
 			&-fellow {
-				background-image: url("../img/bgAd.png");
+				background-image: url("../img/fellowBg.png");
 			}
 			&-equipment {
-				background-image: url("../img/bgAd.png");
+				background-image: url("../img/equipmentBg.png");
 			}
 		}
 	}
@@ -2943,15 +2942,19 @@ body {
 		position: absolute;
 		color: #879596;
 		cursor: pointer;
-		@include breakpoint(1024px) {
+		@include breakpoint(1600px) {
 			top: 0;
 			right: -74px;
+			width: 54px;
+			height: 54px;
 			font-size: 54px;
 		}
 		@include breakpoint(max-width 1599px) {
 			bottom: 100%;
 			right: 0;
 			margin-bottom: 10px;
+			width: 28px;
+			height: 28px;
 			font-size: 28px;
 		}
 	}
