--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -1408,6 +1408,7 @@ footer a {
 }
 @media (min-width: 1024px) {
   footer .container > .flex {
+    align-items: baseline;
     justify-content: space-between;
   }
 }
@@ -3258,6 +3259,11 @@ ul.list-reset.app-list li.app-logo img {
 @media (min-width: 375px) {
   .animation {
     bottom: 75px;
+  }
+}
+@media (min-width: 1024px) {
+  .animation {
+    bottom: 50px;
   }
 }
 .animation i {
